# Conmux

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: deploy-manual.yml
docs/manual/: book.toml
docs/manual/en/: book.toml  lang-toggle.js
docs/manual/en/src/: README.md  SUMMARY.md
docs/manual/en/src/advanced/: control-plane.md  protocol.md
docs/manual/en/src/authors/: boundary.md  observation.md  onboarding.md
docs/manual/en/src/from-tmux/: differences.md  wsl.md
docs/manual/en/src/guide/: first-session.md  install.md  what-and-why.md
docs/manual/en/src/reference/: conflux.md  faq.md  troubleshooting.md
docs/manual/src/: README.md  SUMMARY.md
docs/manual/src/advanced/: control-plane.md  protocol.md
docs/manual/src/authors/: boundary.md  observation.md  onboarding.md
docs/manual/src/from-tmux/: differences.md  wsl.md
docs/manual/src/guide/: first-session.md  install.md  what-and-why.md
docs/manual/src/reference/: conflux.md  faq.md  troubleshooting.md
examples/: conpty_probe.rs  ctrlc_probe.rs  replay_probe.rs
src/: capture.rs  client.rs  daemon.rs  error.rs  event.rs  inject.rs  job.rs  lib.rs  modes.rs  pane.rs  pane_win.rs  pipe.rs  protocol.rs  scrollback.rs  theme.rs  trust.rs  types.rs  wire.rs
tests/: conpty_spike.rs  daemon_ipc.rs
